fix: fix gap between words

--- a/clip/clip.css
+++ b/clip/clip.css
@@ -56,13 +56,13 @@
 .quote1a {
   position: absolute;
   top: 41%;
-  left: 8%;
+  left: 10%;
 }
 
 .quote1b {
   position: absolute;
   top: 41%;
-  left: 35.3% !important;
+  left: 35.4% !important;
 }
 
 .quote2 {
@@ -80,12 +80,7 @@
 .grill .quote1a {
   position: absolute;
   top: 41%;
-  left: 11%;
-}
-.grill .quote1b {
-  position: absolute;
-  top: 41%;
-  left: 41%;
+  left: 12%;
 }
 
 /* container2 */
